--- a/html/chat.html
+++ b/html/chat.html
@@ -8,17 +8,9 @@
 <link rel="stylesheet" href="css/chat.css">
 </head>
 <body>
-<nav class="navbar navbar-default">
-	<div class="container-fluid">
-		<div class="navbar-header">
-			<a class="navbar-brand" href="chat.html">Chat Sample</a>
-		</div>
-	</div>
-</nav>
-<div id="main">
-</div>
-<script type="text/javascript" src="lib/mqttws31-1.0.1.js"></script>
 <script type="text/javascript" src="lib/Bacon.0.7.70.js"></script>
+<script type="text/javascript" src="lib/mqttws31-1.0.1.js"></script>
+<script type="text/javascript" src="lib/virtual-dom.2.1.0.js"></script>
 <script type="text/javascript" src="js/chat.js"></script>
 </body>
 </html>
