connect to app/mqtt

--- a/server/src/main/webapp/static/chat.html
+++ b/server/src/main/webapp/static/chat.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="css/chat.css">
 </head>
 <body>
+<script type="text/javascript" src="lib/jquery-2.1.4.min.js"></script>
 <script type="text/javascript" src="lib/Bacon.0.7.70.js"></script>
 <script type="text/javascript" src="lib/mqttws31-1.0.1.js"></script>
 <script type="text/javascript" src="lib/virtual-dom.2.1.0.js"></script>
