--- a/server/src/main/webapp/static/chat.html
+++ b/server/src/main/webapp/static/chat.html
@@ -8,10 +8,66 @@
 <link rel="stylesheet" href="css/chat.css">
 </head>
 <body>
+<template>
+<nav class="navbar navbar-default">
+	<div class="container-fluid">
+		<div class="navbar-header">
+			<a href="chat.html" class="navbar-brand">Chat Sample</a>
+		</div>
+	</div>
+</nav>
+<div class="container">
+	<div class="row" data-state="NotConnected">
+		<div style="display: flex;">
+			<div style="flex: 1; padding: 0 5px;">
+				<input class="form-control" placeholder="名前" data-input="user.name" />
+			</div>
+			<div style="width: 100px; padding: 0 5px; text-align: center;">
+				<button class="btn btn-success" style="display: block; width: 100%;" data-click="connect">接続</button>
+			</div>
+		</div>
+	</div>
+	<div class="row" data-state="Connecting">
+		接続中...
+	</div>
+	<div class="row" style="padding: 0 20px 10px 0;" data-state="Connected">
+		<div style="text-align: right;" data-text="user"></div>
+	</div>
+	<div class="row" style="padding: 10px;" data-state="Connected">
+		<div style="display: flex;">
+			<div style="flex: 1; padding: 0 5px;">
+				<input class="form-control" placeholder="メッセージ" data-input="post.content" />
+			</div>
+			<div style="width: 100px; padding: 0 5px; text-align: center;">
+				<button class="btn btn-success" style="display: block; width: 100%;" data-click="post">送信</button>
+			</div>
+		</div>
+	</div>
+	<div class="row" style="padding: 10px;" data-state="Connected">
+		<table class="table">
+			<thead>
+				<tr>
+					<th style="width: 200px;">送信者</th>
+					<th style="width: auto;">メッセージ</th>
+					<th style="width: 200px;">時刻</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr data-rows="posts">
+					<td data-text="post.user"></td>
+					<td data-text="post.content"></td>
+					<td data-text="post.time"></td>
+				</tr>
+			</tbody>
+		</table>
+	</div>
+</div>
+</template>
 <script type="text/javascript" src="lib/jquery-2.1.4.min.js"></script>
 <script type="text/javascript" src="lib/Bacon.0.7.70.js"></script>
 <script type="text/javascript" src="lib/mqttws31-1.0.1.js"></script>
 <script type="text/javascript" src="lib/virtual-dom.2.1.0.js"></script>
+<script type="text/javascript" src="lib/vdom-virtualize-0.0.10.js"></script>
 <script type="text/javascript" src="js/chat.js"></script>
 </body>
 </html>
